--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-#python=3.11 #for pytorch to work
 langchain
 sentence_transformers
 transformers
-#torch #on local system python <=3.11
 sentencepiece
 accelerate
 pypdf
 tiktoken
 streamlit
+python-dotenv
+torch
+tqdm
+# Optional but recommended for using the textsum package
+textsum
